[#5483] Add dark mode styles, fix some issues with V13 CSS

--- a/less/v2/typography.less
+++ b/less/v2/typography.less
@@ -265,7 +265,9 @@
       dl {
         display: flex;
         flex-wrap: wrap;
+        margin: 0.5em 0;
 
+        dd { margin-inline-start: 4px; }
         > div {
           flex: 1 0 100%;
           &.half-width { flex: 1 0 50%; }
